deploy/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: fastapi-hello-world
  # namespace: <your-namespace> # Uncomment and replace <your-namespace>
spec:
  replicas: 1
  selector:
    app: fastapi-hello-world
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: fastapi-hello-world
    spec:
      containers:
        - name: fastapi-hello-world
          image: fastapi-hello-world:latest
          ports:
            - containerPort: 8080
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - fastapi-hello-world
        from:
          kind: ImageStreamTag
          name: fastapi-hello-world:latest
