deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-hello-world
  # namespace: <your-namespace> # Uncomment and replace <your-namespace>
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fastapi-hello-world
